--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,7 @@ qt/project/libs/rpc/src/client/generated_app/
 qt/project/libs/rpc/include/rpc_transmission/server/generated_general/
 qt/project/libs/rpc/include/rpc_transmission/client/
 
-mcu/build-yun/*
+mcu/build-*/*
 mcu/modules/rpc/doc
 mcu/modules/rpc/src/server/generated_app/
 mcu/modules/rpc/src/client/generated_app/
