-using single thread concept on arduino side. works well

--- a/mcu/modules/rpc/qt2mcu_client.cfg
+++ b/mcu/modules/rpc/qt2mcu_client.cfg
@@ -26,3 +26,5 @@ GENINCDIR=./include/rpc_transmission/client/generated_general
 SPCINCDIR=./include/rpc_transmission/client/generated_app
 
 INCLUDE_INTO_TYPES=#include <stdlib.h>
+
+USE_SINGLE_TASK_ARCH = True
