pin opertationen möglich

--- a/mcu/Makefile
+++ b/mcu/Makefile
@@ -9,6 +9,8 @@ gitversion:
 	$(GIT) log -1 --abbrev=8 --format="format:#define GITHASH 0x%h" > include/vc.h
 	$(ECHO) "\n" >> include/vc.h
 	$(GIT) log -1 --date=short --format="format:#define GITDATE \"%ad\"" >> include/vc.h
+	$(ECHO) "\n" >> include/vc.h
+	$(GIT) log -1 --date=short --format="format:#define GITUNIX %ct" >> include/vc.h
 
 all:
 	$(MAKE) gitversion
