--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "mcu/libs/RPC-ChannelCodec"]
 	path = mcu/libs/RPC-ChannelCodec
 	url = https://github.com/Crystal-Photonics/RPC-ChannelCodec.git
+[submodule "RPC-Generator"]
+	path = RPC-Generator
+	url = https://github.com/Crystal-Photonics/RPC-Generator.git
