--- a/mcu/Makefile
+++ b/mcu/Makefile
@@ -13,7 +13,7 @@ gitversion:
 	$(GIT) log -1 --date=short --format="format:#define GITUNIX %ct" >> include/vc.h
 
 all:
-	$(MAKE) gitversion
+#	$(MAKE) gitversion
 	$(MAKE) --makefile=Makefile_build -C $(CODE_DIR) all
 	
 clean:
